# libghostty-rs

./: Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml  windows-ci.yml
crates/ghostty/: Cargo.toml
crates/ghostty-sys/: build.rs
crates/ghostty/src/: alloc.rs  build_info.rs  error.rs  fmt.rs  focus.rs  key.rs  lib.rs  mouse.rs  osc.rs  render.rs  screen.rs  sgr.rs  style.rs  terminal.rs
crates/libghostty-vt/: Cargo.toml
crates/libghostty-vt-sys/: Cargo.toml  README.md  build.rs
crates/libghostty-vt-sys/src/: bindings.rs  bindings_wasm.rs  lib.rs
crates/libghostty-vt-sys/tools/: gen_bindings.rs
crates/libghostty-vt/src/: alloc.rs  dcs.rs  fmt.rs  key.rs  lib.rs  mouse.rs  osc.rs  render.rs  screen.rs  terminal.rs
crates/libghostty-vt/src/selection/: gesture.rs
example/ghostling_rs/: Cargo.toml
example/ghostling_rs/src/: main.rs
example/grid_ref_tracked_rs/: README.md
example/grid_ref_tracked_rs/src/: main.rs
fuzz/afl/: Cargo.toml  valgrind.sh
fuzz/afl/src/: main.rs
