[workspace]
members = [
  "crates/libghostty-vt",
  "crates/libghostty-vt-sys",
  "example/grid_ref_tracked_rs",
  "example/ghostling_rs",
]
default-members = [
  "crates/libghostty-vt",
  "crates/libghostty-vt-sys",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/uzaaft/libghostty-rs"
rust-version = "1.90"
version = "0.2.0"

[workspace.dependencies]
libghostty-vt = { path = "crates/libghostty-vt", version = "0.2.0" }
libghostty-vt-sys = { path = "crates/libghostty-vt-sys", version = "0.2.0" }
