[package]
name = "ghostty"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
allocator_api = ["dep:allocator-api2"]

[dependencies]
allocator-api2 = { version = "0.4.0", optional = true }
ghostty-sys.workspace = true

[dev-dependencies]
ghostty-sys.workspace = true
