[package]
name = "ghostling_rs"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
libghostty-vt = { workspace = true, features = ["tracing"] }
macroquad = "0.4.14"
nix = { version = "0.31.2", features = ["term", "fs", "signal", "process", "user", "ioctl"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
